--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+dist-ssr
 
 # Gatsby files
 .cache/
@@ -102,3 +103,12 @@ dist
 
 # TernJS port file
 .tern-port
+
+.DS_Store
+*.local
+# Editor directories and files
+.idea
+.vscode
+
+three.js
+resources
